# -

./: .dockerignore  .editorconfig  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  condarc.project.yml  docker-compose.yml  environment.yml  neo4j-import.sh  pyproject.toml  pyrightconfig.json  requirements.txt
app/: README.md  main.py  main_http_support.py  main_runtime_support.py  run.py
app/api/: __init__.py  common.py  conversations.py  langgraph.py  route_utils.py  upload.py
app/chat/: README.md  __init__.py
app/chat/application/: agent_query_service.py  conversation_service.py  document_formats.py  task_queue.py
app/chat/domain/: __init__.py  schemas.py  utils.py
app/knowledge/: README.md  __init__.py
app/knowledge/application/: indexing_contracts.py  indexing_service.py
app/knowledge/domain/: prompt_builder.py  schemas.py
app/platform/: __init__.py  container.py  database.py
app/platform/config/: app_config.py
app/platform/security/: __init__.py
app/scripts/: README.md  bootstrap_compose_db.py  db_script_support.py  init_db.py
app/shared/: README.md  __init__.py  task_queue.py
app/shared/core/: README.md  app_config.py  config.py  config_models.py  config_runtime.py  database.py  database_support.py  json_utils.py  logger.py
app/shared/retrieval/: __init__.py  milvus_hybrid_core.py
app/shared/security/: README.md  __init__.py
app/user/: README.md
app/user/application/: user_profile_service.py  user_profile_store.py
app/user/domain/: __init__.py  profile_payload_support.py  schemas.py
configs/docker/app/: start.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_REPORT.md  MIGRATION.md  OPTIMIZATION_REPORT.md  REFACTOR_REPORT.md  VERIFICATION_REPORT.md
docs/superpowers/specs/: 2026-06-13-backend-readability-architecture-design.md
examples/: basic_agent.py
llm_backend/: Dockerfile  __init__.py  main.py  main_runtime_support.py  main_support.py  run.py  run_support.py
llm_backend/app/: README.md  __init__.py
llm_backend/scripts/: README.md  __init__.py  bootstrap_compose_db.py  db_script_support.py  init_db.py
mysql-init/: init.sql
rag_doc_parser/: README.md  __init__.py  cli.py  config.py  exceptions.py  models.py  pipeline.py  pyproject.toml  requirements.txt  utils.py
rag_doc_parser/examples/: run_example.py
rag_doc_parser/markdown/: __init__.py  block_parser.py  cleaner.py  heading_parser.py  table_utils.py
rag_doc_parser/parsers/: __init__.py  base.py  docling_docx_parser.py  docling_pdf_parser.py  docx_fallback_parser.py
rag_doc_parser/retrieval/: __init__.py  bm25_index.py  cli.py  config.py  hybrid_search.py  milvus_store.py  rrf.py
rag_doc_parser/splitters/: __init__.py  code_splitter.py  table_splitter.py  text_splitter.py
scripts/: neo4j-import.sh  setup-conda.ps1  verify_migration.py
shared_retrieval/: __init__.py  milvus_hybrid_core.py  pyproject.toml
specs/: 2026-07-20-domain-skeleton-align-design.md
tests/: conftest.py  test_main.py  test_main_runtime_support.py  test_main_support.py  test_rag_doc_parser_pipeline.py  test_rag_milvus_store.py  test_run_support.py  test_script_entrypoints.py  test_shared_milvus_hybrid_core.py
tests/api/: test_langgraph.py  test_langgraph_support.py  test_upload.py  test_upload_storage_support.py  test_upload_support.py
tests/chat/: test_conversation_repository.py  test_conversation_service.py  test_delete_conversation_memory_cleanup.py  test_lg_memory_prompt.py  test_lg_memory_runtime.py  test_lg_message_utils.py  test_lg_models.py  test_lg_neo4j_conn.py  test_lg_nodes.py  test_lg_prompts.py  test_lg_react.py  test_lg_retrievers.py  test_northwind_cypher_retriever.py  test_predefined_cypher_utils.py  test_text2cypher_validation.py  test_text2cypher_workflow.py
tests/core/: test_config.py  test_config_support.py  test_database_support.py  test_json_utils.py  test_lazy_package_imports.py  test_logger.py  test_logger_support.py  test_package_exports.py
tests/knowledge/: test_indexing_service.py  test_ltm_operation_utils.py  test_ltm_soft_delete_session.py  test_ltm_store_utils.py  test_memory_config.py  test_memory_config_defaults.py  test_memory_extractor.py  test_memory_middleware.py  test_profile_utils.py  test_prompt_builder.py  test_rag_doc_parser_pipeline.py  test_redis_short_term_memory_support.py  test_simple_long_term_memory.py  test_stm_clear_session.py
tests/lg_agent/: test_lg_context.py  test_lg_execution_utils.py  test_lg_memory_prompt.py  test_lg_memory_runtime.py  test_lg_message_utils.py  test_lg_model_support.py  test_lg_models.py  test_lg_neo4j_conn.py  test_lg_node_support.py  test_lg_nodes.py  test_lg_prompt_support.py  test_lg_prompts.py  test_lg_react.py  test_lg_react_support.py  test_lg_retriever_support.py  test_lg_retrievers.py  test_northwind_cypher_retriever.py  test_predefined_cypher_utils.py  test_text2cypher_validation.py  test_text2cypher_workflow.py
tests/memory/: test_ltm_collection.py  test_ltm_operation_utils.py  test_ltm_runtime_support.py  test_ltm_store_utils.py  test_memory_config.py  test_memory_config_defaults.py  test_memory_extractor.py  test_memory_middleware.py  test_memory_middleware_runtime_support.py  test_memory_middleware_support.py  test_profile_support.py  test_profile_utils.py  test_prompt_builder.py  test_redis_short_term_memory_support.py  test_simple_long_term_memory.py  test_stm_store_utils.py
tests/security/: test_prompt_security.py
tests/services/: test_conversation_service.py  test_conversation_support.py  test_indexing_service.py  test_indexing_support.py  test_task_queue.py  test_task_queue_runtime.py  test_task_queue_support.py  test_user_profile_repository.py  test_user_profile_service.py  test_user_profile_service_support.py  test_user_profile_store.py  test_user_profile_store_support.py  test_user_profile_store_utils.py
tests/shared/: test_config.py  test_database.py  test_task_queue.py
tests/user/: test_user_profile_repository.py  test_user_profile_service.py
(+273 files in other folders)
