[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-doc-parser"
version = "0.1.0"
description = "文档解析、切分与混合检索模块"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0.0",
    "pymilvus>=2.5.0",
    "python-docx>=1.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["rag_doc_parser*"]
